[gd_scene load_steps=3 format=3 uid="uid://m1gd4uysgciu"]

[ext_resource type="Script" path="res://addons/graph_dialog_system/editor/components/scripts/variable_input_field.gd" id="1_4gcwc"]
[ext_resource type="Texture2D" uid="uid://b0ytab723ndi" path="res://addons/graph_dialog_system/icons/variable_types/bool.svg" id="1_msffi"]

[node name="VariableInputField" type="Control" node_paths=PackedStringArray("_string_value", "_int_value", "_float_value", "_bool_value")]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
script = ExtResource("1_4gcwc")
_string_value = NodePath("StringValue")
_int_value = NodePath("IntValue")
_float_value = NodePath("FloatValue")
_bool_value = NodePath("BoolValue")

[node name="StringValue" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
placeholder_text = "Value"

[node name="IntValue" type="SpinBox" parent="."]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
max_value = 999999.0

[node name="FloatValue" type="SpinBox" parent="."]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
max_value = 999999.0
step = 0.1

[node name="BoolValue" type="OptionButton" parent="."]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
selected = 0
item_count = 2
popup/item_0/text = "False"
popup/item_0/icon = ExtResource("1_msffi")
popup/item_1/text = "True"
popup/item_1/icon = ExtResource("1_msffi")
popup/item_1/id = 1
